# youtube-summarizer

./: .gitignore  main.py  pyproject.toml  requirements.txt
